NPM publish issues fixed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/neilveil/quick-sw.git"
+        "url": "git+https://github.com/neilveil/quick-sw.git"
     },
     "keywords": [
         "service-worker",
